Fix horizontal disposition of `li`s in intro steps [See more]
The max-width along with the padding is set in the `li`s to prevent the text
in it of being too close of the adjacents `li`s.

This commit increases the spacing between adjacent `li`s in the intro
steps section, so that those items are centered on medium and large screens.

--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -29,11 +29,14 @@
 
   .intro__steps{
     flex-direction: row;
+    justify-content: space-between;
   }
 
   .intro__steps li{
     margin-top: 0;
     text-align: left;
+    max-width: 350px;
+    padding: 0 10px;
   }
 
   .intro__icon-container i {
